Add VirtualMedia support and document Java compatibility issues
Based on community feedback from gist comments:
- Added vm=1 parameter to enable VirtualMedia functionality (@chisaato)
- Documented Java 8 requirement for keyboard/input functionality
- Added cross-platform Java installation instructions (Linux/macOS/Windows)
- Updated warnings about Java 9+ keyboard input issues

Changes:
- Enable VirtualMedia support in KVM invocation (line 234)
- Comprehensive Java compatibility section in README
- Updated gist contribution notes with all community improvements

Community credits: @chisaato, @delta-whiplash, @fuzunspm for reporting issues

Co-Authored-By: Claude Sonnet 4.5 (1M context) <noreply@anthropic.com>